[gd_scene load_steps=13 format=3 uid="uid://bmfbdamx2iue1"]

[ext_resource type="Script" path="res://minigames/summoning_point/summoning_point.gd" id="1_qxlgs"]
[ext_resource type="FontFile" uid="uid://c25dx12ryq4uf" path="res://Fonts/dogicapixel.ttf" id="2_5axxb"]
[ext_resource type="Script" path="res://minigames/summoning_point/game_instructions.gd" id="3_pt7vt"]
[ext_resource type="FontFile" uid="uid://ce3om1rv7cdjs" path="res://Fonts/dogicapixelbold.ttf" id="4_aujnb"]
[ext_resource type="AudioStream" uid="uid://ckn4id37qsxnf" path="res://unsorted_assets/audio/select.wav" id="5_tfyed"]

[sub_resource type="LabelSettings" id="LabelSettings_fv6je"]
font = ExtResource("2_5axxb")
font_size = 8
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_l32ko"]
resource_name = "pulse"
length = 0.75
loop_mode = 2
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.25, -0.25, 0, 0.3, 0, 0.8, -0.3, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.75)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.3, 0, 1, -0.3, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.75)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.1, 0.0347093, 1, -0.45, 0.0211298, 0.25, 0),
"times": PackedFloat32Array(0, 0.75)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kwwsu"]
_data = {
"pulse": SubResource("Animation_l32ko")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dc8f3"]
size = Vector2(23, 27)

[sub_resource type="ViewportTexture" id="ViewportTexture_0m0vu"]
viewport_path = NodePath("MinigameViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4s6i1"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_knu2u"]
font = ExtResource("4_aujnb")

[node name="SummoningPoint" type="Node2D"]
script = ExtResource("1_qxlgs")

[node name="ActionIndicator" type="Label" parent="."]
modulate = Color(0.439538, 0.439538, 0, 0.712297)
offset_left = -6.0
offset_top = -12.0
offset_right = 7.0
text = "v"
label_settings = SubResource("LabelSettings_fv6je")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ActionIndicator"]
libraries = {
"": SubResource("AnimationLibrary_kwwsu")
}
autoplay = "pulse"

[node name="TriggerArea" type="Area2D" parent="."]

[node name="TriggerAreaShape" type="CollisionShape2D" parent="TriggerArea"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_dc8f3")

[node name="LifespanTimer" type="Timer" parent="."]

[node name="MinigameViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(320, 160)

[node name="Camera2D" type="Camera2D" parent="MinigameViewport"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MinigameCanvas" type="Sprite2D" parent="CanvasLayer/Control"]
scale = Vector2(2, 2)
texture = SubResource("ViewportTexture_0m0vu")

[node name="game instructions" type="CanvasLayer" parent="CanvasLayer"]
visible = false
script = ExtResource("3_pt7vt")

[node name="textbox_container" type="MarginContainer" parent="CanvasLayer/game instructions"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -95.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="CanvasLayer/game instructions/textbox_container"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4s6i1")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/game instructions/textbox_container"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/game instructions/textbox_container/MarginContainer"]
layout_mode = 2

[node name="start" type="Label" parent="CanvasLayer/game instructions/textbox_container/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "*"
label_settings = SubResource("LabelSettings_knu2u")

[node name="text" type="Label" parent="CanvasLayer/game instructions/textbox_container/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Hello World!"
label_settings = SubResource("LabelSettings_knu2u")
autowrap_mode = 2

[node name="end" type="Label" parent="CanvasLayer/game instructions/textbox_container/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "v"
label_settings = SubResource("LabelSettings_knu2u")
horizontal_alignment = 2
vertical_alignment = 2

[node name="select" type="AudioStreamPlayer" parent="CanvasLayer/game instructions"]
stream = ExtResource("5_tfyed")

[connection signal="body_entered" from="TriggerArea" to="." method="_on_player_contact"]
[connection signal="timeout" from="LifespanTimer" to="." method="_on_lifespan_timeout"]
